@@ -1,6 +1,7 @@
 0.16
  - Add support for new use case of number of pages.
  - Fix error in case of not detected publishing house.
+ - Improve callback to series to add argument with no_warn flag.
 
 0.15 2024-09-18T21:40:20+02:00
  - Fix of not-defined NKCR AUT ID in people.
